--- a/WhereIsEveryone/AndroidManifest.xml
+++ b/WhereIsEveryone/AndroidManifest.xml
@@ -39,6 +39,9 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".SecondActivity"
+			android:screenOrientation="portrait" />
 	</application>
 
 </manifest>
